# brainstormer

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml  subagents.jsonl.example
src/brainstormer/: __init__.py  cli.py  config.py
src/brainstormer/agents/: __init__.py  orchestrator.py  subagents.py  tools.py
src/brainstormer/backends/: __init__.py  memory.py  persistence.py
src/brainstormer/middleware/: __init__.py  hooks.py  lifecycle.py
src/brainstormer/skills/: __init__.py  loader.py
src/brainstormer/utils/: __init__.py  file_parser.py  logging.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_file_parser.py  test_hooks.py  test_memory.py  test_persistence.py  test_skills.py  test_subagents.py
